chore: add patch for index updates
